--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - images/
+    - assets/hafsData_v2-0.json
+    - assets/fonts/uthmanic_hafs_v20.ttf
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -81,9 +83,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-   - family: Hafs
+   - family: uthmanic_hafs_v20
      fonts:
-       - asset: assets/HafsSmart_08.ttf
+       - asset: assets/fonts/uthmanic_hafs_v20.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
