--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   easy_localization: ^3.0.2
   shared_preferences: ^2.2.0
+  flutter_native_splash: ^2.3.1
 
 dev_dependencies:
   flutter_test:
